--- a/src/components/Country/country.css
+++ b/src/components/Country/country.css
@@ -5,7 +5,7 @@
     align-items: center;
     background: gray;
     background: -webkit-linear-gradient(to right, rgb(199, 219, 18), rgb(174, 125, 214));
-    background: linear-gradient(to right, rgb(158, 129, 182), rgb(137, 79, 212));
+    background: linear-gradient(to right, rgb(245, 244, 248),rgba(56, 53, 53, 0.842));
 
     border-radius: 10px;
     transition: all 0.6s ease-in-out;
@@ -14,8 +14,8 @@
     font-size: 15px;
 }
 .country:hover{
-    transform: scale(1.1);
-    background: linear-gradient(to left, rgb(158, 129, 182), rgb(137, 79, 212));
+    transform: scale(1.05);
+    background: linear-gradient(to left, rgb(245, 244, 248),rgba(56, 53, 53, 0.842));
 }
 .country > img{
     width:33%;
