--- a/src/components/SearchBox/searchbox.css
+++ b/src/components/SearchBox/searchbox.css
@@ -1,4 +1,18 @@
-.Header {
+.header{
     width: 100%;
-    height: 400px;
+    height: 350px;
+    border-radius:5px;
+    margin:13px;
+    background-image: url("../images/banner.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.header > input{
+    position: relative;
+    top: 276px;
+    left: 37%;
+    font-size: 20px;
+    border-radius: 5px;
+    background-color:rgb(233, 230, 238);
+    font-family: 'Ubuntu', sans-serif;
 }
